[package]
name = "tunnel"
version = "0.1.0"
edition = "2021"
description = "Software-defined egress engine with traffic observability + file sharing"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
snow = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
base64 = "0.22"
anyhow = "1"
async-trait = "0.1"
socket2 = { version = "0.5", features = ["all"] }
boringtun = { version = "0.7", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
x25519-dalek = { version = "2", features = ["static_secrets"] }
smoltcp = { version = "0.12", default-features = false, features = [
    "std", "log", "medium-ip", "proto-ipv4", "proto-ipv4-fragmentation",
    "socket-tcp", "socket-udp",
] }

# GUI (optional, enabled by default)
eframe = { version = "0.29", optional = true }
rfd = { version = "0.15", optional = true }
chrono = "0.4"
open = { version = "5", optional = true }
tempfile = "3.24.0"

[features]
default = ["gui"]
gui = ["eframe", "rfd", "open"]

# ============================================================================
# Platform-specific TUN dependencies
# ============================================================================

[target.'cfg(unix)'.dependencies]
tun = { version = "0.6", features = ["async"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
wintun = "0.4"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
] }
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Rpc",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
] }

[profile.release]
lto = true
codegen-units = 1